# FileCategoryLibrary

./: .gitignore  CMakeLists.txt  README.md
FileCategoryLibrary/: CMakeLists.txt  FileCategoryLibrary.cpp  FileCategoryLibrary.h
include/FileCategoryLibrary/: FileCategory.h
src/: FileCategory.cpp
